--- a/darts_app/src/app/app.component.html
+++ b/darts_app/src/app/app.component.html
@@ -1,29 +1,22 @@
-<div>This is the dartsapp
-  <style type="text/css">
-    .tg  {border-collapse:collapse;border-spacing:0;}
-    .tg td{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
-      overflow:hidden;padding:10px 5px;word-break:normal;}
-    .tg th{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
-      font-weight:normal;overflow:hidden;padding:10px 5px;word-break:normal;}
-    .tg .tg-0lax{text-align:left;vertical-align:top}
-    </style>
-    <table class="tg">
-    <thead>
-      <tr>
-        <th class="tg-0lax"></th>
-        <th class="tg-0lax"></th>
-        <th class="tg-0lax"></th>
-        <th class="tg-0lax"></th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td class="tg-0lax"></td>
-        <td class="tg-0lax"></td>
-        <td class="tg-0lax"></td>
-        <td class="tg-0lax"></td>
-      </tr>
-    </tbody>
-    </table>
+<div class="container">
 
+  <div class="upper-data">
+    <!add images to the upper body but only display>
+    <!//the images if a specific condition is there>
+    <img src="../assets/rain.jpg" *ngIf="14>15">
+    <img src="../assets/sunset.jpeg" *ngIf="14<=15">
+    <! weather-data component will be defined here from the content side >
+    <! and the respective stly will be defined in the style css file>
+    <div class="weather-data">
+      <div class="location">Wellington</div>
+      <div class="temperature">{{14.40 | number:'1.0-0'}}°C</div>
+      
+    </div>
+  </div>
+
+  <div class="lower-data">
+
+  </div>
 </div>
+
+<router-outlet></router-outlet>
