--- a/darts_app/src/styles.css
+++ b/darts_app/src/styles.css
@@ -1,1 +1,91 @@
 /* You can add global styles to this file, and also import other style files */
+/* we will first define some root styles here*/
+
+:root {
+
+    --blue1: #3C429E;
+    --blue2: #4C52AD;
+    --yellow1: #FAC742;
+    --white: #FFF;
+    --grey-1: #EDEDED;
+    --shadow-dark: rgba(0,0,0,0.3);
+    --shadow-light: rgba(255,255,255,0.1);
+
+}
+
+/* removing margin and paddings from all elements */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 16px;
+    width: 100%;
+    height: 100vh;
+    background-color: var(--blue1);
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+/*depending on the size of the background images, the container will not be visible */
+.container {
+    width: 1200px;
+    height: 90vh;
+    background-color: var(--blue2);
+    border-radius: 20px;
+    box-shadow: 10px 10px 10px var(--shadow-dark);
+    
+}
+
+.upper-data {
+
+    position: relative;
+    overflow: hidden;
+    width: 100%;
+    height: 50%;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+
+}
+
+/*to design or adjust the image inside the container */
+.upper-data img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+
+} 
+
+.weather-data {
+    position: relative;
+    z-index: 1;/*this is to keep the content on highest level visible*/
+    width: 100%;
+    height: 100%;
+    background-color: var(--shadow-dark);
+    display: flex; /* so that I'm able to center the labels*/
+    flex-direction: column; /*so that the labels are on top of each other*/
+    align-items: center;
+    justify-content: center;
+
+}
+
+.location {
+    color: var(--white);
+    text-align: center;
+    font-size: 1.2em;
+
+}
+
+.temperature {
+    color: var(--white);
+    text-align: center;
+    font-size: 4em;
+    font-weight: 900;
+    
+}
