--- a/darts_app/src/app/app.component.html
+++ b/darts_app/src/app/app.component.html
@@ -3,8 +3,9 @@
   <div class="upper-data">
     <!add images to the upper body but only display>
     <!//the images if a specific condition is there>
-    <img src="../assets/rain.jpg" *ngIf="14>15">
-    <img src="../assets/sunset.jpeg" *ngIf="14<=15">
+    <!img src="../assets/rain.jpg" *ngIf="14>15">
+    <!img src="../assets/sunset.jpeg" *ngIf="14<=15">
+    <img src="../assets/background_dartboard.jpg">
     <! weather-data component will be defined here from the content side >
     <! and the respective stly will be defined in the style css file>
     <div class="weather-data">
@@ -15,6 +16,51 @@
   </div>
 
   <div class="lower-data">
+    <div class="more-info-label">
+      Name Player 1
+    </div>
+    <div class="more-info-container">
+      <div class="info-block">
+        <div class="info-block-label">
+          <img src="../assets/darts_clipart.png">
+          <span>dartsclipart</span>
+        </div>
+        <div class="info-block-value">
+          10°C
+        </div>
+      </div>
+
+      <div class="info-block">
+        <div class="info-block-label">
+          <img src="../assets/darts_cliparts2.jpg">
+          <span>dartsclipart2</span>
+        </div>
+        <div class="info-block-value">
+          10°C
+        </div>
+      </div>
+
+      <div class="info-block">
+        <div class="info-block-label">
+          <img src="../assets/darts_cliparts3.jpg">
+          <span>dartsclipart3</span>
+        </div>
+        <div class="info-block-value">
+          10°C
+        </div>
+      </div>
+
+      <div class="info-block">
+        <div class="info-block-label">
+          <img src="../assets/darts_clipart4.png">
+          <span>dartsclipart4</span>
+        </div>
+        <div class="info-block-value">
+          10°C
+        </div>
+      </div>
+    </div>
+    
 
   </div>
 </div>
