--- a/darts_app/src/styles.css
+++ b/darts_app/src/styles.css
@@ -25,7 +25,7 @@ body {
     font-size: 16px;
     width: 100%;
     height: 100vh;
-    background-color: var(--blue1);
+    background-color: var(--shadow-dark);
 
     display: flex;
     justify-content: center;
@@ -33,7 +33,8 @@ body {
 }
 /*depending on the size of the background images, the container will not be visible */
 .container {
-    width: 1200px;
+    /*width: 1200px;*/
+    width: 70em;
     height: 90vh;
     background-color: var(--blue2);
     border-radius: 20px;
@@ -62,8 +63,23 @@ body {
 
 } 
 
-.weather-data {
+.lower-data {
     position: relative;
+    overflow: hidden;
+    width: 100%;
+    height: 50%;
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+    padding: 1em;
+    display: flex;
+    flex-direction: column;
+}
+
+.weather-data {
+    /*position: relative;*/
+    position: absolute;
+    top: 0;
+    left: 0;
     z-index: 1;/*this is to keep the content on highest level visible*/
     width: 100%;
     height: 100%;
@@ -88,4 +104,53 @@ body {
     font-size: 4em;
     font-weight: 900;
     
+}
+
+.more-info-label {
+    color: var(--white);
+}
+
+.more-info-container {
+    flex: 1;
+    background-color: var(--shadow-light);
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+    margin-top: 1em;
+
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+.info-block {
+    width: 50%;
+    display: flex;
+    flex-direction: row;
+
+}
+
+.info-block-label {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.info-block-label img {
+    width: 4em;
+}
+
+.info-block-label span {
+    color: var(--white);
+    font-size: 0.8em;
+}
+
+.info-block-value {
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: var(--white);
 }
