table on classic dart page updated

--- a/darts_app/src/app/app.component.html
+++ b/darts_app/src/app/app.component.html
@@ -9,8 +9,49 @@
     <! weather-data component will be defined here from the content side >
     <! and the respective stly will be defined in the style css file>
     <div class="weather-data">
-      <div class="location">Wellington</div>
-      <div class="temperature">{{14.40 | number:'1.0-0'}}°C</div>
+      <div class="location">
+        <style type="text/css">
+          .tg  {border-collapse:collapse;border-spacing:0;}
+          .tg td{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
+            overflow:hidden;padding:10px 5px;word-break:normal;}
+          .tg th{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
+            font-weight:normal;overflow:hidden;padding:10px 5px;word-break:normal;}
+          .tg .tg-kftd{background-color:#b1d8b7;color:#000000;text-align:left;vertical-align:top}
+          .tg .tg-8ytw{background-color:#2f5233;text-align:left;vertical-align:top}
+          </style>
+          <table class="tg">
+          <thead> Classic darts game
+            <tr>
+              <th class="tg-8ytw">Player name</th>
+              <th class="tg-8ytw">Current value</th>
+              <th class="tg-8ytw">Current average</th>
+              <th class="tg-8ytw">Previous throw</th>
+              <th class="tg-8ytw">Last game average</th>
+              <th class="tg-8ytw">Long time average</th>
+              
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td class="tg-kftd">Name Player 1</td>
+              <td class="tg-kftd"></td>
+              <td class="tg-kftd"></td>
+              <td class="tg-kftd"></td>
+              <td class="tg-kftd"></td>
+              <td class="tg-kftd"></td>
+            </tr>
+            <tr>
+              <td class="tg-kftd">Name Player 2</td>
+              <td class="tg-kftd"></td>
+              <td class="tg-kftd"></td>
+              <td class="tg-kftd"></td>
+              <td class="tg-kftd"></td>
+              <td class="tg-kftd"></td>
+            </tr>
+          </tbody>
+          </table>
+      </div>
+      
       
     </div>
   </div>
