Design finished for classic darts.

--- a/darts_app/src/app/app.component.html
+++ b/darts_app/src/app/app.component.html
@@ -24,20 +24,36 @@
           <tbody>
               <tr>
                   <td>Dom</td>
-                  <td>6000</td>
-                  <td>6000</td>
-                  <td>6000</td>
-                  <td>6000</td>
-                  <td>6000</td>
+                  <td>267</td>
+                  <td>30</td>
+                  <td>21</td>
+                  <td>43</td>
+                  <td>41</td>
               </tr>
               <tr class="active-row">
                   <td>Melissa</td>
-                  <td>5150</td>
-                  <td>6000</td>
-                  <td>6000</td>
-                  <td>6000</td>
-                  <td>6000</td>
+                  <td>288</td>
+                  <td>10</td>
+                  <td>15</td>
+                  <td>20</td>
+                  <td>18</td>
               </tr>
+              <tr>
+                <td>Peter</td>
+                <td>235</td>
+                <td>28</td>
+                <td>21</td>
+                <td>46</td>
+                <td>38</td>
+            </tr>
+            <tr>
+              <td>Lara</td>
+              <td>290</td>
+              <td>28</td>
+              <td>21</td>
+              <td>46</td>
+              <td>38</td>
+          </tr>
               <!-- and so on... -->
           </tbody>
         </table>
@@ -49,52 +65,58 @@
   </div>
 
   <div class="lower-data">
-    <div class="more-info-label">
-      Name Player 1
-    </div>
-    <div class="more-info-container">
-      <div class="info-block">
-        <div class="info-block-label">
-          <img src="../assets/darts_clipart.png">
-          <span>dartsclipart</span>
-        </div>
-        <div class="info-block-value">
-          10°C
-        </div>
-      </div>
-
-      <div class="info-block">
-        <div class="info-block-label">
-          <img src="../assets/darts_cliparts2.jpg">
-          <span>dartsclipart2</span>
-        </div>
-        <div class="info-block-value">
-          10°C
-        </div>
-      </div>
-
-      <div class="info-block">
-        <div class="info-block-label">
-          <img src="../assets/darts_cliparts3.jpg">
-          <span>dartsclipart3</span>
-        </div>
-        <div class="info-block-value">
-          10°C
-        </div>
-      </div>
-
-      <div class="info-block">
-        <div class="info-block-label">
-          <img src="../assets/darts_clipart4.png">
-          <span>dartsclipart4</span>
-        </div>
-        <div class="info-block-value">
-          10°C
-        </div>
-      </div>
-    </div>
     
-
+    <div class="leftpane">
+      <h2>Melissa</h2>
+      <table class="lower-table">
+        <thead class="lower-table thead">
+          <tr>
+            <td>Category</td>
+            <td>Value</td>
+          </tr>
+        </thead>
+        <tbody class="lower-table tbody">
+          <tr>
+            <td>Max this game:</td>
+            <td>80</td>
+          </tr>
+          <tr>
+            <td>Max ever:</td>
+            <td>180</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+      
+    <div class="middlepane">
+      <h3>Choose input value </h3>
+       
+      <table class="lower-table-middle">
+        <tbody>
+          <tr>
+            <button class="button">10</button>
+            <button class="button">18</button>
+            <button class="button">20</button>  
+            <button class="button">26</button>  
+            <button class="button">36</button> 
+          </tr>
+          <tr>
+            <button class="button">40</button>  
+            <button class="button">48</button>  
+            <button class="button">56</button> 
+            <button class="button">58</button> 
+            <button class="button">80</button>
+          </tr>
+        </tbody>
+      </table>
+    </div>   
+    <div class="rightpane">
+        <h3>Or enter manually</h3>
+        <button class="dummy_textfield_button">Enter text here</button>
+        <button class="dummy_safe_button">Safe</button>
+    </div> 
+    
+     
   </div>
 </div>
 
