--- a/darts_app/src/styles.css
+++ b/darts_app/src/styles.css
@@ -3,13 +3,28 @@
 
 :root {
 
-    --blue1: #3C429E;
-    --blue2: #4C52AD;
+    --blue1: #1D2940;
+    --blue2: #326572;
     --yellow1: #FAC742;
     --white: #FFF;
-    --grey-1: #EDEDED;
+    --grey-1: #808B85;
+    --grey-2: #B3CAC3;
     --shadow-dark: rgba(0,0,0,0.3);
-    --shadow-light: rgba(255,255,255,0.1);
+    --shadow-light: #D2E4EC;
+
+    /*upper table and background*/
+    --grey-3: #4A4C48;
+    --green-1: #96BC8A;
+    --white-1: #F2F0EA;  
+    --brown-1: #D9C08D;
+    --red-1: #AF4E46;
+
+    /*lower table*/
+    --white-2: #E2DBD2;
+    --green-2: #C7C26F;
+    --green-3: #A2A262;
+    --green-4: #475644;
+    --grey-4: #242927;
 
 }
 
@@ -25,7 +40,7 @@ body {
     font-size: 16px;
     width: 100%;
     height: 100vh;
-    background-color: var(--shadow-dark);
+    background-color: var(--grey-3);
 
     display: flex;
     justify-content: center;
@@ -36,7 +51,7 @@ body {
     /*width: 1200px;*/
     width: 70em;
     height: 90vh;
-    background-color: var(--blue2);
+    background-color: var(--white-2);
     border-radius: 20px;
     box-shadow: 10px 10px 10px var(--shadow-dark);
     
@@ -72,7 +87,44 @@ body {
     border-bottom-right-radius: 20px;
     padding: 1em;
     display: flex;
-    flex-direction: column;
+    /*flex-direction: column;*/
+}
+.leftpane {
+    width: 25%;
+    height: 100%;
+    float: left;
+    background-color: var(--green-2);
+    border-collapse: collapse;
+    text-align: center; 
+    border-bottom-left-radius: 20px;
+    padding: 1em;
+}
+.topplane {
+    width: 75%;
+    height: 10%;
+    float: left;
+    background-color: var(--grey-4);
+}
+.middlepane {
+    width: 50%;
+    height: 100%;
+    float: left;
+    background-color: var(--green-3);
+    border-collapse: collapse;
+    text-align: center; 
+    padding: 1em;
+}
+
+.rightpane {   
+    width: 25%;   
+    height: 100%;   
+    position: relative;
+    float: right;   
+    background-color:var(--green-4);   
+    border-collapse:collapse;    
+    text-align: center; 
+    border-bottom-right-radius: 20px;
+    padding: 1em;
 }
 
 .weather-data {
@@ -105,56 +157,6 @@ body {
     font-weight: 900;
     
 }
-
-.more-info-label {
-    color: var(--white);
-}
-
-.more-info-container {
-    flex: 1;
-    background-color: var(--shadow-light);
-    border-bottom-left-radius: 20px;
-    border-bottom-right-radius: 20px;
-    margin-top: 1em;
-
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-}
-
-.info-block {
-    width: 50%;
-    display: flex;
-    flex-direction: row;
-
-}
-
-.info-block-label {
-    width: 50%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-
-}
-
-.info-block-label img {
-    width: 4em;
-}
-
-.info-block-label span {
-    color: var(--white);
-    font-size: 0.8em;
-}
-
-.info-block-value {
-    width: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: var(--white);
-}
-
 .styled-table {
     border-collapse: collapse;
     margin: 25px 0;
@@ -164,28 +166,106 @@ body {
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
 }
 .styled-table thead tr {
-    background-color: #009879;
+    background-color:var(--green-4);
     color: #ffffff;
     text-align: left;
     
 }
+
 .styled-table th,
 .styled-table td {
     padding: 12px 12px;
 }
 .styled-table tbody tr {
     border-bottom: 1px solid #dddddd;
+    background-color: var(--green-3);
 }
 
 .styled-table tbody tr:nth-of-type(even) {
-    background-color: #f3f3f3;
+    background-color: var(--white-2);
+    color: var(--grey-4);
 }
 
 .styled-table tbody tr:last-of-type {
-    border-bottom: 2px solid #009879;
+    border-bottom: 2px solid var(--grey-4);
 }
 
 .styled-table tbody tr.active-row {
     font-weight: bold;
-    color: #009879;
+    color: var(--grey-4);
+}
+
+.lower-table {
+    font-family: sans-serif;
+    text-align: left;
+}
+
+.lower-table thead {
+    font-weight: bold;
+}
+
+.lower-table tbody {
+    font-size: 0.9em;
+    border-bottom: 1px;
+    text-align: left;
+
+}
+
+.lower-table th,
+.lower-table td {
+    padding: 12px 12px;
+}
+
+.lower-table-middle {
+    padding: 12px 12px;
+    margin-left: auto;
+    margin-right: auto;
+}
+/*add styles for buttons */
+.button {
+    background-color:var(--grey-4);
+    border: none;
+    color: white;
+    padding: 20px 26px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 24px;
+    margin: 4px 4px;
+    cursor: pointer;
+    border-radius: 12px;
+  }
+
+.button:hover {background-color: var(--grey-3)}
+
+.button:active {
+  background-color:var(--green-2);
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
+}
+
+.dummy_textfield_button {
+
+background-color:var(--white-2); /* Green */
+border: none;
+color: var(--grey-4);
+padding: 15px 32px;
+margin: 20px 4px;
+text-align: center;
+text-decoration: none;
+display: inline-block;
+font-size: 18px;
+
+}
+
+.dummy_safe_button {
+    background-color:var(--grey-4); /* Green */
+    border: none;
+    color: var(--white-2);
+    padding: 15px 32px;
+    margin: 8px 4px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 18px;
 }
