--- a/darts_app/src/styles.css
+++ b/darts_app/src/styles.css
@@ -34,7 +34,19 @@
     padding: 0;
     box-sizing: border-box;
 }
+.headline{
+    font-weight: bold;
+    font-size: 0.9em;
+}
 
+.players_name_highlighted{
+    font-weight: bold;
+    font-size: 1.8em;
+    text-align: left;
+    
+    color: var(black);
+    border:2px solid black;
+}
 body {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 16px;
@@ -58,14 +70,12 @@ body {
 }
 
 .upper-data {
-
     position: relative;
     overflow: hidden;
     width: 100%;
     height: 50%;
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
-
 }
 
 /*to design or adjust the image inside the container */
@@ -75,7 +85,6 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-
 } 
 
 .lower-data {
@@ -87,8 +96,8 @@ body {
     border-bottom-right-radius: 20px;
     padding: 1em;
     display: flex;
-    /*flex-direction: column;*/
 }
+
 .leftpane {
     width: 25%;
     height: 100%;
@@ -99,6 +108,7 @@ body {
     border-bottom-left-radius: 20px;
     padding: 1em;
 }
+
 .topplane {
     width: 75%;
     height: 10%;
@@ -127,7 +137,7 @@ body {
     padding: 1em;
 }
 
-.weather-data {
+.upper-container {
     /*position: relative;*/
     position: absolute;
     top: 0;
@@ -140,79 +150,65 @@ body {
     flex-direction: column; /*so that the labels are on top of each other*/
     align-items: center;
     justify-content: center;
-
 }
 
-.location {
-    color: var(--white);
-    text-align: center;
-    font-size: 1.2em;
-
-}
-
-.temperature {
-    color: var(--white);
-    text-align: center;
-    font-size: 4em;
-    font-weight: 900;
-    
-}
-.styled-table {
+/*design the table in the upper container */
+.upper-table {
     border-collapse: collapse;
     margin: 25px 0;
+    color: var(black);
     font-size: 0.9em;
     font-family: sans-serif;
+    text-align: center;
     min-width: 400px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
 }
-.styled-table thead tr {
+.upper-table thead tr {
     background-color:var(--green-4);
     color: #ffffff;
-    text-align: left;
-    
+    text-align: left;  
 }
 
-.styled-table th,
-.styled-table td {
+.upper-table th,
+.upper-table td {
     padding: 12px 12px;
 }
-.styled-table tbody tr {
+.upper-table tbody tr {
     border-bottom: 1px solid #dddddd;
     background-color: var(--green-3);
 }
 
-.styled-table tbody tr:nth-of-type(even) {
+.upper-table tbody tr:nth-of-type(even) {
     background-color: var(--white-2);
-    color: var(--grey-4);
+    
 }
 
-.styled-table tbody tr:last-of-type {
+.upper-table tbody tr:last-of-type {
     border-bottom: 2px solid var(--grey-4);
 }
 
-.styled-table tbody tr.active-row {
+.upper-table tbody tr.active-row {
     font-weight: bold;
-    color: var(--grey-4);
+    
 }
 
-.lower-table {
+.lower-table-left {
     font-family: sans-serif;
     text-align: left;
 }
 
-.lower-table thead {
+.lower-table-left thead {
     font-weight: bold;
 }
 
-.lower-table tbody {
+.lower-table-left tbody {
     font-size: 0.9em;
     border-bottom: 1px;
     text-align: left;
-
 }
 
-.lower-table th,
-.lower-table td {
+.lower-table-left th,
+.lower-table-left td {
     padding: 12px 12px;
 }
 
@@ -221,6 +217,8 @@ body {
     margin-left: auto;
     margin-right: auto;
 }
+
+
 /*add styles for buttons */
 .button {
     background-color:var(--grey-4);
@@ -230,13 +228,15 @@ body {
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 24px;
+    font-size: 0.9em;
     margin: 4px 4px;
     cursor: pointer;
     border-radius: 12px;
-  }
+}
 
-.button:hover {background-color: var(--grey-3)}
+.button:hover {
+    background-color: var(--grey-3)
+}
 
 .button:active {
   background-color:var(--green-2);
@@ -245,17 +245,15 @@ body {
 }
 
 .dummy_textfield_button {
-
-background-color:var(--white-2); /* Green */
-border: none;
-color: var(--grey-4);
-padding: 15px 32px;
-margin: 20px 4px;
-text-align: center;
-text-decoration: none;
-display: inline-block;
-font-size: 18px;
-
+    background-color:var(--white-2); /* Green */
+    border: none;
+    color: var(--grey-4);
+    padding: 15px 32px;
+    margin: 20px 4px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 0.9em;
 }
 
 .dummy_safe_button {
@@ -267,5 +265,5 @@ font-size: 18px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 18px;
+    font-size: 0.9em;
 }
